# paradigma

./: .buildinfo  .gitattributes  .gitignore  .pre-commit-config.yaml  BACKWARD_COMPATIBILITY_ANALYSIS.md  BACKWARD_COMPAT_DETAILED.md  CHANGELOG.md  CITATION.cff  CODE_REVIEW_ISSUES.md  CONTRIBUTING.md  DATETIME_IMPLEMENTATION_SUMMARY.md  ERROR_HANDLING_IMPROVEMENTS.md  HIGH_PRIORITY_FIXES.md  IMPLEMENTATION_PLAN.md  LICENSE  QUICK_REFERENCE.md  README.md  REVIEW_SUMMARY.md  changelog.html  compare_versions.py  conduct.html  contributing.html  debug_source.py  debug_unpacking.py  debug_unpacking2.py  genindex.html  index.html  license.html  objects.inv  old_gait_pipeline.py  py-modindex.html  pyproject.toml  pytype.cfg  search.html  searchindex.js  test_adaptive_frequencies_demo.py  test_backward_compat_new.py  test_datetime_implementation.py  test_metadata_structure.py  test_signature_analysis.py  (+3 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: 01_bug_report.md  10_feature_request.md  20_blank.md  feature_request.md
.github/workflows/: build-and-test.yml  ci.yml  publish.yml
_modules/: index.html
_modules/paradigma/: classification.html  config.html  constants.html  feature_extraction.html  gait_analysis.html  gait_analysis_config.html  heart_rate_analysis.html  heart_rate_analysis_config.html  heart_rate_util.html  imu_preprocessing.html  load.html  orchestrator.html  ppg_preprocessing.html  prepare_data.html  preprocessing.html  preprocessing_config.html  quantification.html  segmenting.html  testing.html  util.html  windowing.html
_sources/: index.md.txt  tsdf_paradigma_schemas.md.txt
_sources/autoapi/: index.rst.txt
_sources/guides/: input_formats.md.txt  supported_devices.md.txt
_sources/tutorials/: data_preparation.ipynb.txt  gait_analysis.ipynb.txt  pulse_rate_analysis.ipynb.txt  tremor_analysis.ipynb.txt
autoapi/: index.html
autoapi/paradigma/: index.html
docs/: Makefile  conf.py  data_preparation.md  example.ipynb  index.md  license.md  make.bat  project_structure.md  tsdf_dbpd_channels_and_units.md  tsdf_dbpd_schemas.md  tsdf_paradigma_channels_and_units.md  tsdf_paradigma_schemas.md
docs/autoapi/: index.rst
docs/guides/: config.md  coordinate_system.md  data_input.md  input_formats.md  installation.md  pipeline_runner.md  sensor_requirements.md  supported_devices.md  validation.md
docs/matlab_scripts/: main_sqa_toolbox.asv  main_sqa_toolbox.m
docs/notebooks/: gait_analysis.ipynb  heart_rate_analysis.ipynb  ppg_analysis.ipynb  tremor.ipynb  tremor_analysis.ipynb
docs/tutorials/: data_preparation.ipynb  device_specific_data_loading.ipynb  gait_analysis.ipynb  getting_started.md  heart_rate_analysis.ipynb  index.md  pipeline_orchestrator.ipynb  pulse_rate_analysis.ipynb  tremor_analysis.ipynb
example_data/: segment0001_meta.json
example_data/axivity/: test_data.CWA  test_data.parquet
example_data/empatica/: test_data.avro
example_data/gait_up_physilog/: test_file.parquet
example_data/imu/: IMU_segment0001_meta.json  IMU_segment0002_meta.json
example_data/ppg/: PPG_segment0001_meta.json  PPG_segment0002_meta.json
example_data/verily/: segment0001_meta.json
examples/: run_pipeline_example.py
guides/: config.html  coordinate_system.html  input_formats.html  installation.html  sensor_requirements.html  supported_devices.html
notebooks/gait/: gait_analysis.html
notebooks/ppg/: 1-2-3_signal_quality.html  1-4_HR_estimation.html  ppg_analysis.html
paper/: paper.bib  paper.md
paper/code_and_data/: example_arm_swing_tremor.csv  plot_longitiudinal_example.ipynb
scripts/: build_docs.py  convert_metadata_to_datetime.py  serve_docs.py
src/dbpd/: __init__.py  constants.py  extracting_features.py  feature_extraction.py  gait_analysis.py  gait_analysis_config.py  heart_rate_analysis.py  imu_preprocessing.py  ppg_preprocessing.py  preprocessing_config.py  util.py  (+1 more)
tests/: conftest.py  test_compare_pipelines.py  test_dbpd.py  test_gait_analysis.py  test_heart_rate_analysis.py  test_imu_preprocessing.py  test_notebooks.py  test_orchestrator.py  test_paradigma.py  test_pipeline_runner.py  test_ppg_analysis.py  test_prepare_data.py  test_preprocessing.py  test_pulse_rate_analysis.py  test_tremor_analysis.py
tutorials/: data_preparation.html  device_specific_data_loading.html  gait_analysis.html  heart_rate_analysis.html  index.html  pipeline_orchestrator.html  pulse_rate_analysis.html  tremor_analysis.html
(+307 files in other folders)
