[tool.poetry]
name = "paradigma"
version = "0.3.1"
description = "Paradigma - a toolbox for Digital Biomarkers for Parkinson's Disease"
authors = [ "Peter Kok <p.kok@esciencecenter.nl>",
            "Vedran Kasalica <v.kaslica@esciencecenter.nl>",
            "Erik Post",
            "Kars Veldkamp",
            "Nienke Timmermans",
            "Diogo Coutinho Soriano",
            "Luc Evers" ]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.4"
scikit-learn = "^1.3.2"
tsdf = "^0.5.2"
pytype = "^2024.4.11"
# for the record: pytype was installed directly with pip (in the poetry environment),
# because poetry didn't handle the install for different CPU architectures

[tool.poetry.group.testing.dependencies]
ipykernel = "^6.27.1"
pytest = "^7.4.3"
pytest-datadir = "^1.5.0"
pytest-cov = "^4.1.0"
papermill = "^2.5.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.3.6"
myst-nb = "^1.1.0"
sphinx-autoapi = "^3.0.0"
sphinx-rtd-theme = "^2.0.0"
sphinx-serve = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
