[tool.poetry]
name = "paradigma"
version = "1.0.2"
description = "ParaDigMa - A toolbox for deriving Parkinson's disease Digital Markers from real-life wrist sensor data"
authors = [ "Erik Post <erik.post@radboudumc.nl>",
            "Kars Veldkamp <kars.veldkamp@radboudumc.nl>",
            "Nienke Timmermans <nienke.timmermans@radboudumc.nl>",
            "Diogo Soriano",
            "Vedran Kasalica <v.kaslica@esciencecenter.nl>",
            "Peter Kok <p.kok@esciencecenter.nl>",
            "Luc Evers <luc.evers@radboudumc.nl>",
            ]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
scikit-learn = ">=1.3.2,<1.6.1"
tsdf = "^0.5.2"
pytype = "^2024.4.11"
# for the record: pytype was installed directly with pip (in the poetry environment),
# because poetry didn't handle the install for different CPU architectures
python-dateutil = "^2.9.0.post0"

[tool.poetry.group.testing.dependencies]
ipykernel = "^6.27.1"
pytest = "^7.4.3"
pytest-datadir = "^1.5.0"
pytest-cov = "^4.1.0"
papermill = "^2.5.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.3.6"
myst-nb = "^1.1.0"
sphinx-autoapi = "^3.0.0"
sphinx-rtd-theme = "^2.0.0"
sphinx-serve = "^1.0.1"
myst-parser = "^4.0.0"
nbsphinx = "^0.9.6"

[tool.poetry.group.dev.dependencies]
pytype = "^2024.10.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
