[tool.poetry]
name = "paradigma"
version = "1.0.4"
description = "ParaDigMa - A toolbox for deriving Parkinson's disease Digital Markers from real-life wrist sensor data"
authors = [ "Erik Post <erik.post@radboudumc.nl>",
            "Kars Veldkamp <kars.veldkamp@radboudumc.nl>",
            "Nienke Timmermans <nienke.timmermans@radboudumc.nl>",
            "Diogo Soriano",
            "Vedran Kasalica <v.kaslica@esciencecenter.nl>",
            "Peter Kok <p.kok@esciencecenter.nl>",
            "Luc Evers <luc.evers@radboudumc.nl>",
            ]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
scikit-learn = ">=1.3.2,<1.6.1"
tsdf = { git = "https://github.com/biomarkersParkinson/tsdf.git", branch = "main" }
python-dateutil = "^2.9.0.post0"
nbconvert = "^7.16.6"
openmovement = { git = "https://github.com/digitalinteraction/openmovement-python.git", branch = "master" }
pyarrow = "^22.0.0"
avro = "^1.12.1"

[tool.poetry.group.testing.dependencies]
ipykernel = "^6.27.1"
pytest = "^7.4.3"
pytest-datadir = "^1.5.0"
pytest-cov = "^4.1.0"
papermill = "^2.5.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.3.6"
myst-nb = "^1.1.0"
sphinx-autoapi = "^3.0.0"
sphinx-rtd-theme = "^2.0.0"
sphinx-serve = "^1.0.1"
myst-parser = "^4.0.0"
nbsphinx = "^0.9.6"

[tool.poetry.group.dev.dependencies]
notebook = "^7.4.5"
ipykernel = "^6.30.1"
pre-commit = "^4.3.0"
jupyter-client = "^8.6.3"
nbstripout = "^0.8.1"
nb-clean = "^4.0.1"
jupyter = "^1.1.1"
jupyterlab-widgets = "<=3.0.15"

[tool.poetry.scripts]
build-docs = "scripts.build_docs:main"
serve-docs = "scripts.serve_docs:main"
paradigma = "paradigma.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
